[Style] Fix vertical alignment of user-icon & sync-indicator-icon

--- a/src/app/purchase-view/purchase-view.component.scss
+++ b/src/app/purchase-view/purchase-view.component.scss
@@ -28,6 +28,7 @@ $purchase-header-height: 31vh;
   &.r1-c1 {
     grid-row: 1;
     grid-column: 1;
+    height: 40px;
   }
   &.r1-c2 {
     grid-row: 1;
@@ -36,6 +37,7 @@ $purchase-header-height: 31vh;
   &.r1-c3 {
     grid-row: 1;
     grid-column: 3;
+    height: 40px;
   }
   &.r3-c2 {
     grid-row: 2;
