--- a/src/app/shared/sync-indicator/sync-indicator.component.scss
+++ b/src/app/shared/sync-indicator/sync-indicator.component.scss
@@ -1,5 +1,10 @@
 @import "../../../assets/variables";
 
+mat-icon {
+  display: block;
+  margin: auto;
+}
+
 .success {
   color: $indicator-green;
 }
